	- fixed possible conflict between FLASH token FLASH folder
	- preload FLASH files like single/group files (consistency)
	- renamed/cleaned-up tilp_slct.c functions
	- del_var: increase timeout due to garbage collecting
	- fixed timeout in send_flash, send_tigroup and del_var
	- 'Ready' reopens SilverLink device like DirectLink (the only way to clear error)

- 18/07/2006, version 0.20 (0.1.3, 0.2.4, 0.2.2, 0.0.5): roms
	- use ticalcs_probe instead of the previous code (easier & clearer)
	- added Seamonkey to the browser list, suggest Firefox instead of the obsolete Mozilla Suite (kevin)
	- fixed bug #1523480: --no-gui doesn't work
	- fixed bug reported by "Andrew Haninger" <ahaning@gmail.com>: can't send TI85 backup
		from command line
	- fixed bug in the filename naming scheme
	- implemented Armand's suggestion: allow to directly input the path from keyboard

- 12/07/2006, version 0.19 (0.1.3, 0.2.3, 0.2.2, 0.0.5): roms
	- for now, use this naming scheme for TI9x var filenames: folder.var.extension
	- suggestion of FTP83+: don't allow use of USB options is USB support is not available.

- 25/06/2006, version 0.18 (0.1.1, 0.2.2, 0.2.0, 0.0.4): roms
	- implemented full TiGroup support (ram, archive and flash)
	- re-enabled device open/close instead of reset.
	- fixed NULL dereference in filesel.c (kevin)
	- refresh right frame after var retrieval
	- fixed bad displaying of lists on TI84+ due to bad translation of CalcModel value.

- 18/06/2006, version 0.17 (0.1.1, 0.2.2, 0.2.0, 0.0.3): roms
	- changes in tifiles API (TiGroup)
	- changes in ticalcs API (backup with TiGroup)
	- fixed accelerator keys in popup menu (right frame)
	- added accelarator keys in popup menu (left frame)
	- fixed manpage about DirectLink

- 11/06/2006, version 0.16 (0.1.1, 0.2.1, 0.1.5, 0.0.3): roms
	- removed text argument in pbars: not used because internally set-up by ticalc2
	- reworked management of progress bars